# vesicleimaging

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  todo.md  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
jupyter_notebooks/: rename_pd_columns_by_filename.py
plotting/: annotate_statistics.py  frap_plotting.py  plot.py
snippets/: czi_to_tif.py
test_data/: analysis.xlsx  frap.pkl  metadata.pkl
test_data/frap/: analysis.xlsx  frap.pkl  metadata.pkl
test_data/general/metadata/: 0_airyscan_zstack_CZI_MetaData.xml  2channel_CZI_MetaData.xml  2channel_zstack_CZI_MetaData.xml  3channel_timelapse_CZI_MetaData.xml
test_data/metadata/: E2_top_CZI_MetaData.xml
tests/: __init__.py  test_image_analysis.py  test_vesicleimaging.py
vesicle_imaging/: czi_frap.py  czi_image_analysis.py  czi_image_handling.py  czi_metadata_to_xmldict.py  czi_timelapse_analysis.py  czi_to_png_scalebar.py  czi_zstack_analysis.py  format.py  imgfileutils.py
vesicleimaging/: GUI.py  __init__.py  cli.py  czi_image_analysis.py  czi_image_handling.py  czi_processing.py  czi_to_png_GUI.py  fcs.py  file_handling.py  frap.py  image_analysis.py  image_info.py  image_operations.py  imgfileutils.py  setup.cfg  vesicleimaging.py
vesicleimaging/plotting/: annotate_statistics.py  fcs.py  format.py
