[tool.poetry]
name = "vesicleimaging"
version = "0.1.0"
description = ""
authors = ["Lukas Heuberger <45766540+lukasheuberger@users.noreply.github.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aicsimageio = "^4.9.4"
aicspylibczi = "^3.1.0"
asciitree = "^0.3.3"
asttokens = "^2.2.1"
click = "^8.1.3"
cloudpickle = "^2.2.1"
colorama = "^0.4.6"
contourpy = "^1.0.7"
cycler = "^0.11.0"
czifile = "^2019.7.2"
dask = "^2023.3.1"
dnspython = "^2.3.0"
elementpath = "^4.0.1"
email-validator = "^1.3.1"
entrypoints = "^0.4"
et-xmlfile = "^1.1.0"
executing = "^1.2.0"
fasteners = "^0.18"
fonttools = "^4.39.0"
fsspec = "^2023.3.0"
h5py = "^3.8.0"
icecream = "^2.1.3"
idna = "^3.4"
imagecodecs = "^2023.1.23"
imageio = "^2.26.0"
importlib-resources = "^5.12.0"
kiwisolver = "^1.4.4"
lazy-loader = "^0.1"
locket = "^1.0.0"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
matplotlib-scalebar = "^0.8.1"
networkx = "^3.0"
numcodecs = "^0.11.0"
numpy = "^1.24.2"
ome-types = "^0.3.3"
opencv-python = "^4.7.0.72"
openpyxl = "^3.1.2"
packaging = "^23.0"
pandas = "^1.5.3"
partd = "^1.3.0"
pathlib = "^1.0.1"
pillow = "^9.4.0"
pint = "^0.20.1"
pydantic = "^1.10.6"
pydash = "^6.0.2"
pygments = "^2.14.0"
pyparsing = "^3.0.9"
pyqt6 = "^6.4.2"
pyqt6-qt6 = "^6.4.2"
pyqt6-sip = "^13.4.1"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
pywavelets = "^1.4.1"
pyyaml = "^6.0"
resource-backed-dask-array = "^0.1.0"
scikit-image = "^0.20.0"
six = "^1.16.0"
tifffile = "^2023.2.28"
toolz = "^0.12.0"
typing-extensions = "^4.5.0"
wrapt = "^1.15.0"
xarray = "^2023.2.0"
xmlschema = "^2.2.2"
xmltodict = "^0.13.0"
zarr = "^2.14.2"
zipp = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
