[metadata]
name = vesicleimaging
version = 1.0
author = Lukas Heuberger
author_email = lukas.heuberger@gmail.com
description = library analysing vesicles on microscopy images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukasheuberger/vesicleimaging
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True